--- a/sshtunnel_manager.service
+++ b/sshtunnel_manager.service
@@ -4,18 +4,20 @@ Documentation=https://github.com/sctfic/SshTunnel/blob/main/readme.md
 After=network.target
 Wants=network-online.target
 
-
 [Service]
 Type=simple
 User=root
 Group=root
-ExecStart=/usr/bin/python3 /home/alban/Dev/sshtunnel/sshtunnel_manager.py start
-ExecStop=/usr/bin/python3 /home/alban/Dev/sshtunnel/sshtunnel_manager.py stop
-ExecReload=/usr/bin/python3 /home/alban/Dev/sshtunnel/sshtunnel_manager.py restart
+ExecStart=/usr/bin/python3 /usr/local/bin/sshtunnel_manager.py daemon
+ExecStop=/usr/bin/python3 /usr/local/bin/sshtunnel_manager.py stop
+ExecReload=/usr/bin/python3 /usr/local/bin/sshtunnel_manager.py restart
+StandardOutput=append:/var/log/sshtunnel/sshtunnel_manager.log
+StandardError=append:/var/log/sshtunnel/sshtunnel_manager.log
 Restart=on-failure
+RestartSec=2s
 KillMode=process
 KillSignal=SIGTERM
-PIDFile=/var/run/sshtunnel/reload.pid
+PIDFile=/run/sshtunnel/reload.pid
 TimeoutStartSec=30
 TimeoutStopSec=10
 
