--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js"
+        "dev": "nodemon server.js",
+        "test": "jest"
     },
     "dependencies": {
         "dotenv": "^16.3.1",
@@ -13,7 +14,8 @@
     },
     "devDependencies": {
         "jest": "^29.7.0",
-        "nodemon": "^3.1.9"
+        "nodemon": "^3.1.9",
+        "supertest": "^7.1.0"
     },
     "engines": {
         "node": ">=16.0.0"
