--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
         "test": "jest"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "helmet": "^8.1.0"
     },
     "devDependencies": {
+        "express-list-endpoints": "^7.1.1",
         "jest": "^29.7.0",
         "nodemon": "^3.1.9",
         "supertest": "^7.1.0"
