--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ coverage/
 node_modules/
 src/controllers/brouillon.sh
 src/configs/pid/*.pid
+src/configs/key/*_key
+src/configs/key/*.pub
+public/old
+svelte@latest/
